add function of selecting algorithm

--- a/task2_Maze/maze.html
+++ b/task2_Maze/maze.html
@@ -41,6 +41,11 @@
                                             <option>Maze1</option>
                                             <option>Maze2</option>
                                         </select>
+                                        <span class="input-group-addon addon-sm">Algorithm:</span>
+                                        <select id="algType" class="form-select select-sm">
+                                            <option>Absolute distance priorty</option>
+                                            <option>A* Algorithm</option>
+                                        </select>
                                         <div></div> 
                                         <label class="form-checkbox input-sm">
                                             <input id="chkAnimated" type="checkbox" class="input-sm" name="maze" checked><i class="form-icon"></i>Animated
@@ -57,7 +62,8 @@
                                 </div>
                                 <div id="maze1" class="column col-6"></div>
                                 <div id="maze2" class="column col-6"></div>
-                                <div id="footer" class="column col-12">Footer</div>        
+                                <div id="footer1" class="column col-6">Violence Algorithm</div>
+                                <div id="fotter2" class="column col-18">Optimized Algorithm</div>        
                             </div>
                         </div>
                     </div>
