--- a/task2_Maze/maze.html
+++ b/task2_Maze/maze.html
@@ -4,12 +4,15 @@
         <meta charset="UTF-8">
         <title>Maze</title>
         <script src="maze.js"></script>
+        <script src="maze.png"></script>
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
         <link rel="stylesheet" href="maze.css">
+        <link href="maze.png" rel="SHORTCUT ICON">
     </head>
     <body onload="init()">
+        <h1 style="text-align:center">MAZE!</h1>
         <div class="container">
             <div id="main" class="columns">
                 <div id="menu" class="column col-2">
@@ -53,7 +56,7 @@
                                         <span class="input-group-addon addon-sm">Columns:</span>
                                         <input id="cols" class="form-input input-sm" type="number" placeholder="90" value="90">
                                         <span class="input-group-addon addon-sm">Rows:</span>
-                                        <input id="rows" class="form-input input-sm" type="number" placeholder="30" value="30">
+                                        <input id="rows" class="form-input input-sm" type="number" placeholder="60" value="60">
                                         <span class="input-group-addon addon-sm">Density:</span>
                                         <input id="density" class="form-input input-sm" type="number" placeholder="60" value="60" disabled>
                                         <button id="btnCreateMaze" class="btn btn-sm input-group-btn" onclick="onCreate()">Create</button>
