--- a/task2_Maze/introduction.html
+++ b/task2_Maze/introduction.html
@@ -19,6 +19,8 @@
             <p>contributer: JolyneFr</p>
             <p>code base:
             <a href="https://github.com/zilinglius/maze.git">Experimental Class.SE.SJTU.</a></p>
+            <p>origin code:
+            <a href="https://github.com/JolyneFr/IPC/tree/master/task2_Maze">github.com/JolyneFr/IPC/tree/master/task2_Maze</p>
         </div>
     </body>
 </html>
